testsuite/tests/typecheck/should_fail/AssocTyDef02.stderr
AssocTyDef02.hs:7:5: error: [GHC-41522]
    • Illegal argument ‘[b]’ in:
        ‘type Typ [b] = ...’
        The arguments to ‘Typ’ must all be distinct type variables.
    • In the default associated type family instance declaration for ‘Typ’
      In the class declaration for ‘Cls’

